--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 </head>
 <body>
   <div id="neverForget">
-    #NeverForget <img src="" alt="emote here">
+    #NeverForget <img src="clueless-aware.gif" alt="AWARE">
   </div>
   <div id="pressF">Press <strong>F</strong> to pay respects (<span id="fCount">0</span>)</div>
 
   <img id="mainImage" src="titan-holo.png" alt="TITAN HOLO">
-  <a href="https://guns.lol/chris_got">Website by <strong>Chris Got</strong> →</a>
+  <a href="https://guns.lol/chris_got">Made by <strong>Chris Got</strong> →</a>
 
   <canvas id="physicsCanvas"></canvas>
 
@@ -95,11 +95,11 @@
     // CONFIG — add your filenames and assets here
     // ------------------------------------------------------------
     const imageFiles = [
-      "", "", "", "", "", "", "", "", "", "", "", "", ""
+      "360fx360f1.png", "360fx360f2.png", "360fx360f8.png", "360fx360f3.png", "360fx360f4.png", "360fx360f5.png", "360fx360f6.png", "360fx360f7.png", "360fx360f9.png", "360fx360f01.png", "360fx360f7.png", "360fx360f7.png", "360fx360f7.png"
     ]; // ← fill in your 13 PNG filenames (e.g. "ball1.png", "ball2.png", etc.)
 
     const specialIndex = 3;        // index of the special ball (plays sound + swaps image)
-    const specialNewImage = "";    // new PNG after grab (e.g. "changed.png")
+    const specialNewImage = "360fx360f7.png";    // new PNG after grab (e.g. "changed.png")
     const specialSound = "";       // sound file, e.g. "sound.mp3"
 
     const largeIndex = 8;          // index of the larger ball (different from special one)
