--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     const specialIndex = 3;        // index of the special ball (plays sound + swaps image)
     const specialNewImage = "360fx360f7.png";    // new PNG after grab (e.g. "changed.png")
-    const specialSound = "";       // sound file, e.g. "sound.mp3"
+    const specialSound = "Quick Fart.mp3";       // sound file, e.g. "sound.mp3"
 
     const largeIndex = 8;          // index of the larger ball (different from special one)
     const NUM_BALLS = 13;
