--- a/index.html
+++ b/index.html
@@ -2,29 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TITAN HOLO</title>
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      width: 100%;
-      height: 100%;
+      margin: 0; padding: 0; overflow: hidden; width: 100%; height: 100%;
       background-color: #3E363F;
       font-family: Arial, sans-serif;
       color: #fffce8;
       text-align: center;
+      user-select: none;
     }
 
     #mainImage {
       width: 58%;
       border: 10px solid #fffce8;
       border-radius: 20px;
-      margin-top: 60px;
+      margin: 60px auto 0 auto;
       position: relative;
-      z-index: 2;
-      pointer-events: none; /* So you can interact with canvas behind */
+      z-index: 3;
+      pointer-events: none; /* So mouse events pass through to canvas */
+      display: block;
+    }
+
+    #neverForget, #pressF {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      color: #fffce8;
+      text-align: center;
+      z-index: 3;
+      pointer-events: auto;
+      user-select: text;
+    }
+
+    #neverForget {
+      font-size: 3.5em;
+      font-weight: bold;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+      color: #fffce8;
+    }
+    #neverForget span:first-child { color: #DD403A; }
+    #neverForget span:nth-child(3) { color: #DD403A; }
+
+    #neverForget img {
+      width: 64px;
+      height: 64px;
+      vertical-align: middle;
+      margin-left: 10px;
+    }
+
+    #pressF {
+      font-size: 1.5em;
+      margin-top: 12px;
+      cursor: pointer;
+      color: #fffce8;
+    }
+    #pressF strong {
+      color: #DD403A;
     }
 
     a {
@@ -35,75 +70,37 @@
       color: #fffce8;
       text-decoration: none;
       font-size: 1.2em;
-      z-index: 3;
+      z-index: 5;
+      user-select: text;
     }
-
     a strong {
       color: #7EC8E3;
       cursor: pointer;
-    }
-
-    #neverForget {
-      position: absolute;
-      color: #fffce8;
-      font-size: 3.5em;
-      font-weight: bold;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-      text-align: left;
-      left: calc(50% - 28%);
-      top: calc(60% + 10px);
-      z-index: 3;
-    }
-
-    #neverForget span {
-      color: #DD403A;
-    }
-
-    #neverForget img {
-      width: 64px;
-      height: 64px;
-      vertical-align: middle;
-      margin-left: 10px;
-    }
-
-    #pressF {
-      position: absolute;
-      top: calc(60% + 100px);
-      left: calc(50% - 28%);
-      text-align: left;
-      font-size: 1.5em;
-      color: #fffce8;
-      cursor: pointer;
-      z-index: 3;
-      user-select: none;
-    }
-
-    #pressF strong {
-      color: #DD403A;
     }
 
     canvas {
       position: fixed;
       top: 0;
       left: 0;
-      pointer-events: none;
+      pointer-events: auto; /* enable interaction */
       width: 100%;
       height: 100%;
-      z-index: 1;
+      z-index: 4; /* above mainImage but below link */
       display: block;
     }
   </style>
 </head>
 <body>
+
   <img id="mainImage" src="titan-holo.png" alt="TITAN HOLO" />
 
-  <div id="neverForget">
+  <div id="neverForget" aria-live="polite">
     <span>#</span>Never<span>Forget</span> <img src="clueless-aware.gif" alt="AWARE" />
   </div>
 
-  <div id="pressF">Press <strong>F</strong> to pay respects (<span id="fCount">0</span>)</div>
+  <div id="pressF" role="button" tabindex="0">Press <strong>F</strong> to pay respects (<span id="fCount">0</span>)</div>
 
-  <a href="https://guns.lol/chris_got">Made by <strong>Chris Got</strong> →</a>
+  <a href="https://guns.lol/chris_got" aria-label="Made by Chris Got link">Made by <strong>Chris Got</strong> →</a>
 
   <canvas id="physicsCanvas"></canvas>
 
@@ -115,7 +112,6 @@
     const engine = Engine.create();
     const world = engine.world;
 
-    // Initialize render with proper options
     const render = Render.create({
       canvas: canvas,
       engine: engine,
@@ -127,10 +123,9 @@
       }
     });
 
-    // Config
     const imageFiles = [
-      "360fx360f1.png", "360fx360f2.png", "360fx360f8.png", "360fx360f3.png", 
-      "360fx360f4.png", "360fx360f5.png", "360fx360f6.png", "360fx360f7.png", 
+      "360fx360f1.png", "360fx360f2.png", "360fx360f8.png", "360fx360f3.png",
+      "360fx360f4.png", "360fx360f5.png", "360fx360f6.png", "360fx360f7.png",
       "360fx360f9.png", "360fx360f01.png", "360fx360f7.png", "360fx360f7.png", "360fx360f7.png"
     ];
 
@@ -140,9 +135,8 @@
     const largeIndex = 8;
 
     const NUM_BALLS = 13;
-    const TARGET_IMG_SIZE = 360;
     const RESTITUTION = 0.85;
-    const FRICTION_AIR = 0.02;  // consistent with original code
+    const FRICTION_AIR = 0.02;
 
     const balls = [];
     const images = [];
@@ -151,7 +145,7 @@
     const ch = window.innerHeight;
     engine.gravity.y = 1;
 
-    // Walls (floor and sides)
+    // Static walls around edges
     const walls = [
       Bodies.rectangle(cw / 2, ch + 50, cw, 100, { isStatic: true }),
       Bodies.rectangle(-50, ch / 2, 100, ch, { isStatic: true }),
@@ -165,7 +159,7 @@
         img.onload = () => res(img);
         img.onerror = () => {
           console.warn("Failed to load image:", src);
-          res(null); // resolve with null to avoid breaking
+          res(null);
         };
         img.src = src;
       });
@@ -177,7 +171,6 @@
         const img = imgSrc ? await loadImage(imgSrc) : null;
         images.push(img);
 
-        // Smaller radius so balls fit nicely on screen
         const radius = i === largeIndex ? 80 : 60;
 
         const ball = Bodies.circle(Math.random() * cw, Math.random() * -500, radius, {
@@ -191,14 +184,13 @@
         ball.isSpecial = i === specialIndex;
         balls.push(ball);
       }
-
       World.add(world, balls);
     }
 
     async function start() {
       await initBalls();
 
-      // Setup mouse interaction
+      // Mouse interaction enabled (balls are draggable)
       const mouse = Mouse.create(render.canvas);
       const mouseConstraint = MouseConstraint.create(engine, {
         mouse: mouse,
@@ -206,7 +198,7 @@
       });
       World.add(world, mouseConstraint);
 
-      // Play sound and change texture when dragging special ball
+      // Play sound and swap image when dragging special ball
       Events.on(mouseConstraint, "startdrag", e => {
         const body = e.body;
         if (body && body.isSpecial) {
@@ -219,12 +211,12 @@
       const runner = Runner.create();
       Runner.run(runner, engine);
 
-      // Initial random velocity so balls bounce visibly
+      // Initial bounce velocity
       for (const b of balls) {
         Body.setVelocity(b, { x: (Math.random() - 0.5) * 10, y: Math.random() * -10 });
       }
 
-      // Respect counter (persistent)
+      // Respect counter persistent
       let respectCount = parseInt(localStorage.getItem("respectCount") || "0");
       const fCount = document.getElementById("fCount");
       fCount.textContent = respectCount;
@@ -239,21 +231,36 @@
       document.addEventListener("keydown", e => {
         if (e.key.toLowerCase() === "f") updateRespect();
       });
+
+      // Update position of #neverForget and #pressF below main image on load and resize
+      function positionTextBelowImage() {
+        const img = document.getElementById("mainImage");
+        const nf = document.getElementById("neverForget");
+        const pf = document.getElementById("pressF");
+
+        const rect = img.getBoundingClientRect();
+        const spacing = 10; // px space between image and text
+
+        nf.style.top = (window.scrollY + rect.bottom + spacing) + "px";
+        pf.style.top = (window.scrollY + rect.bottom + spacing + nf.offsetHeight + 5) + "px";
+      }
+
+      window.addEventListener("resize", positionTextBelowImage);
+      window.addEventListener("load", positionTextBelowImage);
+      positionTextBelowImage();
     }
 
     start();
 
-    // Handle resize properly
+    // Resize canvas + update renderer size + style
     window.addEventListener("resize", () => {
       const w = window.innerWidth;
       const h = window.innerHeight;
 
       render.canvas.width = w;
       render.canvas.height = h;
-
       render.canvas.style.width = w + "px";
       render.canvas.style.height = h + "px";
-
       render.options.width = w;
       render.options.height = h;
     });
