--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
     const imageFiles = [
       "main/360fx360f1.png", "main/360fx360f2.png", "main/360fx360f8.png", "main/360fx360f3.png",
-      "main/360fx360f4.png", "main/360fx360f5.png", "main/360fx360f6.png", "main/360fx360f7.png",
-      "main/360fx360f9.png", "main/360fx360f01.png", "main/360fx360f7.png", "main/360fx360f7.png", "main/360fx360f7.png"
+      "main/360fx360f4.png", "main/360fx360f5.png", "main/360fx360f6.png", "main/360fx360f.png",
+      "main/360fx360f9.png", "main/360fx360f01.png", "main/360fx360f7.png", "main/360fx360f.png", "main/360fx360f.png"
     ];
 
     const specialIndex = 3;
