--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     ];
 
     const specialIndex = 3;
-    const specialNewImage = "360fx360f7.png";
+    const specialNewImage = "360fx360f.png";
     const specialSound = "Quick Fart.mp3";
     const largeIndex = 8;
 
